--- a/hr-worker.properties
+++ b/hr-worker.properties
@@ -1,1 +1,1 @@
-test.config=My config value ***DEFAULT**** profile update new
+test.config=My config value ***DEFAULT**** profile update new - 25/02/23
